Fix whitespace on scroll issue

--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -3,11 +3,8 @@
 .container {
   max-width: 100%;
   padding: 1rem auto 4rem auto;
-  min-height: 100%;
-  height: 100%;
   // margin: 3rem auto 6rem auto;
   font-family: PlayfairDisplay-Regular;
-  background-color: var(--color-page-background);
   color: var(--color-text);
   // color smooth on theme toggle
   -webkit-transition: 1s ease-in;
